--- a/pages/2522.html
+++ b/pages/2522.html
@@ -8,10 +8,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
-<meta name="author" content="Eric Rondeau, Tim Healy, Kyle Wellband" />
-<meta name="description" content="Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections." />
+<meta name="author" content="N/A" />
+<meta name="description" content="NA" />
 
-<title>Adaptive genetic variation and climate change resilience in Canadian Pacific salmon – Pacific Salmon Science</title>
+<title>Untitled Project – Pacific Salmon Science</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -101,12 +101,12 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Adaptive genetic variation and climate change resilience in Canadian Pacific salmon</h1>
+<h1 class="title">Untitled Project</h1>
 </div>
 
 <div>
   <div class="description">
-    Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.
+    NA
   </div>
 </div>
 
@@ -116,7 +116,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Eric Rondeau, Tim Healy, Kyle Wellband </p>
+             <p>N/A </p>
           </div>
   </div>
     
@@ -137,16 +137,16 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <section id="project-summary" class="level2">
 <h2>📋 Project Summary</h2>
-<p><strong>Lead(s):</strong> Eric Rondeau, Tim Healy, Kyle Wellband<br />
-<strong>Division:</strong> Aquatic Diagnostics, Genomics and Technology (ADGT)<br />
-<strong>Section:</strong> Molecular Genetics<br />
-<strong>PSSI Pillar:</strong> 1-Conservation and stewardship<br />
-<strong>Session:</strong> salmon in a changing climate<br />
-<strong>Presentation Date:</strong> December 01, 1955<br />
-<strong>Speakers:</strong> Eric Rondeau, Tim Healy, Kyle Wellband<br />
-<strong>Hosts:</strong> Cory Lagasse; Di Wan; Amber Holdsworth; Patrick Thompson</p>
+<p><strong>Lead(s):</strong> N/A<br />
+<strong>Division:</strong> N/A<br />
+<strong>Section:</strong> N/A<br />
+<strong>PSSI Pillar:</strong> NA<br />
+<strong>Session:</strong> Uncategorized<br />
+<strong>Presentation Date:</strong> TBD<br />
+<strong>Speakers:</strong> Presenters TBD<br />
+<strong>Hosts:</strong> Hosts TBD</p>
 <p><strong>Overview:</strong><br />
-Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.</p>
+NA</p>
 <p><strong>Activities:</strong><br />
 Not Listed</p>
 <p><a href="../index.qmd">⬅ Back to Home</a></p>
@@ -160,7 +160,7 @@ Not Listed</p>
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Adaptive genetic variation and climate change resilience in Canadian Pacific salmon – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Adaptive genetic variation and climate change resilience in Canadian Pacific salmon – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Adaptive genetic variation and climate change resilience in Canadian Pacific salmon – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc">Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc">Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.</span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc">NA</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc">NA</span></p>
 </div>
 </section>
 
