Fix date parsing and session joins

--- a/pages/2522.html
+++ b/pages/2522.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
 <meta name="author" content="N/A" />
-<meta name="description" content="Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions." />
+<meta name="description" content="NA" />
 
 <title>Untitled Project – Pacific Salmon Science</title>
 <style>
@@ -106,7 +106,7 @@ ul.task-list li input[type="checkbox"] {
 
 <div>
   <div class="description">
-    Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions.
+    NA
   </div>
 </div>
 
@@ -140,13 +140,13 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Lead(s):</strong> N/A<br />
 <strong>Division:</strong> N/A<br />
 <strong>Section:</strong> N/A<br />
-<strong>PSSI Pillar:</strong> 1-Conservation and stewardship<br />
+<strong>PSSI Pillar:</strong> NA<br />
 <strong>Session:</strong> Uncategorized<br />
 <strong>Presentation Date:</strong> TBD<br />
 <strong>Speakers:</strong> Presenters TBD<br />
 <strong>Hosts:</strong> Hosts TBD</p>
 <p><strong>Overview:</strong><br />
-Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions.</p>
+NA</p>
 <p><strong>Activities:</strong><br />
 Not Listed</p>
 <p><a href="../index.qmd">⬅ Back to Home</a></p>
@@ -160,7 +160,7 @@ Not Listed</p>
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc">Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions.</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc">Recent studies found that West Coast Vancouver Island Chinook had some of the highest contaminant concentrations. This fish health monitoring project coordinates with the Follow the Fish program to sample for over 600 contaminants in juvenile Chinook to rank the results to prioritize mitigation actions.</span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Untitled Project – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc">NA</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc">NA</span></p>
 </div>
 </section>
 
