--- a/pages/2412.html
+++ b/pages/2412.html
@@ -8,9 +8,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
-<meta name="author" content="Thomas Therriault, Cher LaCoste" />
+<meta name="author" content="Chris Pearce" />
 
-<title>Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future – Pacific Salmon Science</title>
+<title>Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species – Pacific Salmon Science</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -100,7 +100,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future</h1>
+<h1 class="title">Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species</h1>
 </div>
 
 
@@ -110,7 +110,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Thomas Therriault, Cher LaCoste </p>
+             <p>Chris Pearce </p>
           </div>
   </div>
     
@@ -131,15 +131,15 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <section id="project-summary" class="level2">
 <h2>📋 Project Summary</h2>
-<p><strong>Lead(s):</strong> Thomas Therriault, Cher LaCoste<br />
+<p><strong>Lead(s):</strong> Chris Pearce<br />
 <strong>Division:</strong> Ecosystem Sciences (ESD)<br />
 <strong>Section:</strong> Nearshore Ecosystems<br />
 <strong>PSSI Pillar:</strong> 1-Conservation and stewardship<br />
-<strong>Session(s):</strong> Data And Modelling To Support Decision Making<br />
-<strong>Presentation Date(s):</strong> December 11, 2025<br />
-<strong>Speakers:</strong> Thomas Therriault, Cher LaCoste<br />
+<strong>Session(s):</strong> Marine Stressors<br />
+<strong>Presentation Date(s):</strong> December 04, 2025<br />
+<strong>Speakers:</strong> Chris Pearce<br />
 <strong>Overview:</strong><br />
-Aquatic Invasive Species (AIS) continue to be introduced and expand their ranges aided by climate change, threatening biodiversity and Pacific salmon survival. This risk assessment study targets over 400 invasive species within or approaching five freshwater ecoregions in BC. Researchers developed a Non-Indigenous Species Screening Tool (NISST) that allows managers to prioritize the (AIS) threats when creating regulations and salmon recovery plans.</p>
+Ocean warming and acidic upwelling changes the zooplankton food web for young salmon in the Northeast Pacific. This project measures the survival and nutritional value of pteropods (zooplankton) under different temperatures and acidic conditions in a lab. Researchers then compare lab findings to natural zooplankton conditions.</p>
 <div id="quarto-navigation-envelope" class="hidden">
 <p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-sidebar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:Home">Home</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:/index.html">/index.html</span></p>
 <div class="hidden quarto-markdown-envelope-contents" data-render-id="footer-left">
@@ -150,7 +150,7 @@ Aquatic Invasive Species (AIS) continue to be introduced and expand their ranges
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Improved decision making for salmon by understanding the threats of freshwater Aquatic Invasive Species both now and in the future – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
 </div>
 </section>
 
