Updated project pages with confirmed filter, organization, and abstracts

--- a/pages/pssi/2422.html
+++ b/pages/pssi/2422.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
 
-<title>The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</title>
+<title>Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage. – Pacific Salmon Science</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries</h1>
+<h1 class="title">Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage.</h1>
 </div>
 
 
@@ -116,17 +116,21 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>##BCSRIF Project Summary</p>
-<p><strong>Species Group:</strong> Pacific Salmon<br />
-<strong>Location:</strong> Campbell River<br />
-<strong>Partners:</strong> None listed<br />
-<strong>Agreement Period:</strong> August 03, 4429809 to June 29, 4688837<br />
-<strong>Organization:</strong> BC Centre for Aquatic Health Sciences Society<br />
-<strong>Session(s):</strong> Fish Health<br />
-<strong>Presentation Date(s):</strong> December 11, 2025<br />
-<strong>Speakers:</strong> Ahmed Siah<br />
+<p>##PSSI Project Summary</p>
+<p><strong>Division:</strong> Ocean Sciences (OSD)<br />
+<strong>Section:</strong> Ecology and Biogeochemistry<br />
+<strong>Organization:</strong> DFO<br />
+<strong>Session(s):</strong> Follow The Fish<br />
+<strong>Presentation Date(s):</strong> December 04, 2025<br />
+<strong>Speakers:</strong> Nicole LaForge, Micah Quindazzi<br />
 <strong>Abstract:</strong><br />
-The recipient aims to validate Nanopore technology as a rapid and broad-range tool for detecting salmon pathogens from biological and environmental samples from hatcheries. The technology will be applied to screen broodstock examine pathogen sources and their distribution in hatchery systems and identify/characterize the agent(s) associated with disease occurrences.</p>
+Advances in lab microchemistry (mass spectrometry) can be used to track juvenile salmon life stage history from ear bone (otolith) samples. Body size at saltwater entry and habitat use can be measured and compared to fish health and age. This project develops methods for “laser ablation-inductively coupled plasma-mass spectrometry” to test on juvenile Chinook sampled in the Follow the Fish program.</p>
+<p>##Project Bulletin</p>
+<iframe src="../../data/PSSI_bulletin/2422.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;">
+</iframe>
+<p style="text-align: center; margin-top: 10px;">
+<a href="../../data/PSSI_bulletin/2422.pdf" class="btn btn-primary" target="_blank">📥 Download PDF</a>
+</p>
 <div id="quarto-navigation-envelope" class="hidden">
 <p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-sidebar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:Home">Home</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:/index.html">/index.html</span></p>
 <div class="hidden quarto-markdown-envelope-contents" data-render-id="footer-left">
@@ -137,7 +141,7 @@ The recipient aims to validate Nanopore technology as a rapid and broad-range to
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage. – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage. – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage. – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
 </div>
 
 </main> <!-- /main -->
