--- a/pages/pssi/2413.html
+++ b/pages/pssi/2413.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
 
-<title>Convergent tracks: a tagging study to quantify salmon predation by sea lions – Pacific Salmon Science</title>
+<title>Barkley Sound and Clayoquot Sound Krill Monitoring – Pacific Salmon Science</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Convergent tracks: a tagging study to quantify salmon predation by sea lions</h1>
+<h1 class="title">Barkley Sound and Clayoquot Sound Krill Monitoring</h1>
 </div>
 
 
@@ -125,21 +125,21 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <section id="pssi-project-summary" class="level2">
 <h2>PSSI Project Summary</h2>
-<p><strong>Division:</strong> Ecosystem Sciences (ESD)<br />
-<strong>Section:</strong> Regional Ecosystems Effects on Fish and Fisheries<br />
+<p><strong>Division:</strong> Ocean Sciences (OSD)<br />
+<strong>Section:</strong> Ecology and Biogeochemistry<br />
 <strong>Organization:</strong> DFO<br />
 <strong>Session(s):</strong> Marine Stressors<br />
 <strong>Presentation Date(s):</strong> December 04, 2025<br />
-<strong>Speakers:</strong> Cameron Freshwater<br />
+<strong>Speakers:</strong> Akash Sastri<br />
 <strong>Abstract:</strong><br />
-Steller sea lions are hypothesized to feed on large numbers of adult Fraser River sockeye salmon when the salmon migrate past Triangle Island, near northern Vancouver Island. This project tags sockeye salmon and Steller sea lions, and also analyzes sea lion diets, to determine if the area is a survival bottleneck.</p>
+Krill, a type of zooplankton, are a critical component of the marine food webs and important part of juvenile salmon diets. This ecosystem monitoring program collects krill on a monthly basis in two key feeding areas for early marine juvenile salmon along the west coast of Vancouver Island. We are monitoring how the amount and nutritional value (fats, protein and total energy) of krill varies with season and ocean conditions (temperature, salinity, and oxygen).</p>
 </section>
 <section id="project-bulletin" class="level2">
 <h2>Project Bulletin</h2>
-<iframe src="../../data/PSSI_bulletin/2409.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;">
+<iframe src="../../data/PSSI_bulletin/2413.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;">
 </iframe>
 <p style="text-align: center; margin-top: 10px;">
-<a href="../../data/PSSI_bulletin/2409.pdf" class="btn btn-primary" target="_blank">📅 Download PDF</a>
+<a href="../../data/PSSI_bulletin/2413.pdf" class="btn btn-primary" target="_blank">📅 Download PDF</a>
 </p>
 <div id="quarto-navigation-envelope" class="hidden">
 <p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-sidebar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:Home">Home</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:/index.html">/index.html</span></p>
@@ -151,7 +151,7 @@ Steller sea lions are hypothesized to feed on large numbers of adult Fraser Rive
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Convergent tracks: a tagging study to quantify salmon predation by sea lions – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Convergent tracks: a tagging study to quantify salmon predation by sea lions – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Convergent tracks: a tagging study to quantify salmon predation by sea lions – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Barkley Sound and Clayoquot Sound Krill Monitoring – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Barkley Sound and Clayoquot Sound Krill Monitoring – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Barkley Sound and Clayoquot Sound Krill Monitoring – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
 </div>
 </section>
 
