--- a/pages/pssi/3103.html
+++ b/pages/pssi/3103.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 
 
-<title>The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</title>
+<title>Drivers and functional consequences of hatchery epigenetic variation – Pacific Salmon Science</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -99,7 +99,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries</h1>
+<h1 class="title">Drivers and functional consequences of hatchery epigenetic variation</h1>
 </div>
 
 
@@ -119,20 +119,19 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#bcsrif-project-summary" id="toc-bcsrif-project-summary">BCSRIF Project Summary</a></li>
+  <li><a href="#pssi-project-summary" id="toc-pssi-project-summary">PSSI Project Summary</a></li>
   </ul>
 </nav>
-<section id="bcsrif-project-summary" class="level2">
-<h2>BCSRIF Project Summary</h2>
-<p><strong>Species Group:</strong> Pacific Salmon<br />
-<strong>Location:</strong> Campbell River<br />
-<strong>Partners:</strong> None listed<br />
-<strong>Organization:</strong> BC Centre for Aquatic Health Sciences Society<br />
-<strong>Session(s):</strong> Fish Health<br />
+<section id="pssi-project-summary" class="level2">
+<h2>PSSI Project Summary</h2>
+<p><strong>Division:</strong> N/A<br />
+<strong>Section:</strong> Molecular Genetics<br />
+<strong>Organization:</strong> DFO<br />
+<strong>Session(s):</strong> Hatchery Fitness And Genetics<br />
 <strong>Presentation Date(s):</strong> December 11, 2025<br />
-<strong>Speakers:</strong> Ahmed Siah<br />
+<strong>Speakers:</strong> Eric Rondeau, Timothy Healy, Kyle Wellband<br />
 <strong>Abstract:</strong><br />
-The recipient aims to validate Nanopore technology as a rapid and broad-range tool for detecting salmon pathogens from biological and environmental samples from hatcheries. The technology will be applied to screen broodstock examine pathogen sources and their distribution in hatchery systems and identify/characterize the agent(s) associated with disease occurrences.</p>
+No abstract available.</p>
 <div id="quarto-navigation-envelope" class="hidden">
 <p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-sidebar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar-title">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:Home">Home</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-int-navbar:/index.html">/index.html</span></p>
 <div class="hidden quarto-markdown-envelope-contents" data-render-id="footer-left">
@@ -143,7 +142,7 @@ The recipient aims to validate Nanopore technology as a rapid and broad-range to
 </div>
 </div>
 <div id="quarto-meta-markdown" class="hidden">
-<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
+<p><span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metatitle">Drivers and functional consequences of hatchery epigenetic variation – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercardtitle">Drivers and functional consequences of hatchery epigenetic variation – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardtitle">Drivers and functional consequences of hatchery epigenetic variation – Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-metasitename">Pacific Salmon Science</span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-twittercarddesc"></span> <span class="hidden quarto-markdown-envelope-contents" data-render-id="quarto-ogcardddesc"></span></p>
 </div>
 </section>
 
